[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntn-mem"
version = "0.2.0"
description = "NTN-MEM 轻量记忆管理系统——冷热分层存储、场景感知搜索、决策偏置召回"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NTN" }]

# 零第三方依赖——全部使用 Python 标准库
# - wsgiref → HTTP 服务
# - urllib.request → HTTP 客户端（调 Qdrant / LLM provider）
# - sqlite3 → 持久化存储
dependencies = []

[project.optional-dependencies]
# 仅在使用硅基流动等 OpenAI 兼容的 LLM 嵌入提供方时需要
# pip install ntn-mem[embedding]
embedding = [
    "openai>=1.0",
]

[project.scripts]
# 启动服务
ntn-mem = "ntn_agents.ntn_mem.server:main"

[tool.setuptools.packages.find]
where = ["src"]
